--- a/hoteles.html
+++ b/hoteles.html
@@ -4,118 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cadenas Hoteleras de Lujo</title>
-<style>
-       body {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
+<link rel="stylesheet" href="estilos/styles.css">
 
-        header, footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-        }
-
-        nav .menu {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-        }
-
-        nav .menu li {
-            margin: 0 10px;
-        }
-
-        nav .menu li a {
-            text-decoration: none;
-            color: white;
-            font-size: 18px;
-            padding: 10px 15px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-            border-radius: 4px;
-        }
-
-        nav .menu li a:hover, .menu li a.active {
-            background-color: #7ccaff;
-        }
-
-* {
-  box-sizing: border-box;
-}
-
-h2 {
-  color: #333;
-}
-
-/* Create a column layout with Flexbox */
-.row {
-  display: flex;
-  margin: 20px;
-}
-
-/* Left column (menu) */
-.left {
-  flex: 25%;
-  padding: 15px;
-  background-color: #333;
-  color: white;
-  border-radius: 10px;
-}
-
-.left h2 {
-  padding-left: 8px;
-  font-size: 24px;
-  color: #7ccaff;
-}
-
-/* Right column (page content) */
-.right {
-  flex: 75%;
-  padding: 15px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-  
-#mySearch {
-  width: 100%;
-  font-size: 18px;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
-#myMenu {
-  list-style-type: none;
-  padding: 0;
-  margin: 20px 0;
-}
-
-#myMenu li a {
-  padding: 12px;
-  text-decoration: none;
-  color: white;
-  display: block;
-  transition: background-color 0.3s ease;
-}
-
-#myMenu li a:hover, #myMenu li a.active {
-  background-color: #7ccaff;
-  color: black;
-}
-</style>
 </head>
 <body>
     
