--- a/inicio.html
+++ b/inicio.html
@@ -4,76 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destinos - Travel Agent</title>
-    <style>
- body {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        header, footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-        }
-
-        nav .menu {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-        }
-
-        nav .menu li {
-            margin: 0 10px;
-        }
-
-        nav .menu li a {
-            text-decoration: none;
-            color: white;
-            font-size: 18px;
-            padding: 10px 15px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-            border-radius: 4px;
-        }
-
-        nav .menu li a:hover, .menu li a.active {
-            background-color: #7ccaff;
-        }
-
-        h1 {
-            text-align: center;
-            margin: 20px 0;
-            color: #333;
-        }
-
-        main {
-            max-width: 1000px;
-            margin: 20px auto;
-            padding: 0 20px;
-            text-align: center;
-        }
-
-        p {
-            font-size: 1.2em;
-            line-height: 1.6;
-            margin-bottom: 20px;
-        }
-
-        footer {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="estilos/styles.css">
 </head>
 <body>
 
