--- a/destinos/destino_canadae.html
+++ b/destinos/destino_canadae.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>California - Travel Agent</title>
+    <title>Canadá Este - Travel Agent</title>
 
-    <!-- Asegúrate de usar una ruta relativa correcta hacia los estilos -->
+    <!-- Ruta relativa hacia los estilos -->
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
 <body>
@@ -22,32 +22,33 @@
     </header>
 
     <main>
-    <section>
-        <h1>Explora Canada Este</h1>
-        <p> Canadá Este combina la rica historia y cultura de sus ciudades con impresionantes paisajes naturales. Explora la herencia europea en la encantadora Quebec, pasea por las calles históricas de Montreal, y disfruta del vibrante ambiente de Toronto. Además, la región es hogar de maravillas naturales como las Cataratas del Niágara y los bosques de Nueva Escocia, donde también puedes disfrutar de emocionantes esquiadas en invierno. Canadá Este ofrece una mezcla perfecta de tradición, modernidad, y belleza natural, ideal para quienes buscan una experiencia diversa y enriquecedora.</p>
-    </section>
+        <section>
+            <h1>Explora Canadá Este</h1>
+            <p>Canadá Este combina la rica historia y cultura de sus ciudades con impresionantes paisajes naturales. Explora la herencia europea en la encantadora Quebec, pasea por las calles históricas de Montreal, y disfruta del vibrante ambiente de Toronto. Además, la región es hogar de maravillas naturales como las Cataratas del Niágara y los bosques de Nueva Escocia, donde también puedes disfrutar de emocionantes esquiadas en invierno. Canadá Este ofrece una mezcla perfecta de tradición, modernidad, y belleza natural, ideal para quienes buscan una experiencia diversa y enriquecedora.</p>
+        </section>
 
-    <section>
-        <div class="slideshow-container">
+        <section class="slideshow-container">
             <div class="mySlides1">
-                <img src="../Imagenes/canadae1.jpg" style="width:100%">
+                <img src="../Imagenes/canadae1.jpg" style="width:100%" alt="Paisaje de Canadá Este">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/canadae2.jpg" style="width:100%">
+                <img src="../Imagenes/canadae2.jpg" style="width:100%" alt="Paisaje nevado en Canadá Este">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/canadae3.jpg" style="width:100%">
+                <img src="../Imagenes/canadae3.jpg" style="width:100%" alt="Ciudad de Montreal en Canadá">
             </div>
+
+            <!-- Controles de navegación -->
             <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
-</main>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2024 Travel Agent</p>
     </footer>
-    <script src="/scripts/slideshow.js"></script>
+
+    <!-- Ruta corregida del script de slideshow -->
+    <script src="../scripts/slideshow.js"></script>
 </body>
 </html>
-
