--- a/destinos/destino_disney.html
+++ b/destinos/destino_disney.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>California - Travel Agent</title>
+    <title>Disney - Travel Agent</title>
 
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
@@ -21,12 +21,12 @@
     </header>
 
     <main>
-    <section>
-        <h1>Explora Disney</h1>
-        <p>Disney es sinónimo de magia y diversión para todas las edades. Desde los icónicos parques temáticos de Disneyland y Disney World, hasta los espectáculos y desfiles que traen a la vida a los personajes más queridos, una visita a Disney es una experiencia llena de encanto y emoción. Perfecto para familias y fanáticos de todas las generaciones, Disney es el lugar donde los sueños se hacen realidad.</p>
-    </section>
+        <section>
+            <h1>Explora Disney</h1>
+            <p>Disney es sinónimo de magia y diversión para todas las edades. Desde los icónicos parques temáticos de Disneyland y Disney World, hasta los espectáculos y desfiles que traen a la vida a los personajes más queridos, una visita a Disney es una experiencia llena de encanto y emoción. Perfecto para familias y fanáticos de todas las generaciones, Disney es el lugar donde los sueños se hacen realidad.</p>
+        </section>
 
-    <section class="slideshow-container">
+        <section class="slideshow-container">
             <div class="mySlides1">
                 <img src="../Imagenes/disney1.jpeg" style="width:100%">
             </div>
@@ -36,16 +36,17 @@
             <div class="mySlides1">
                 <img src="../Imagenes/disney3.jpeg" style="width:100%">
             </div>
+
+            <!-- Controles de navegación -->
             <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
+        </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Travel Agent</p>
     </footer>
-    
+
     <script src="../scripts/slideshow.js"></script>
-    </body>
-    </html>
+</body>
+</html>
