--- a/destinos/destino_dubai.html
+++ b/destinos/destino_dubai.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>California - Travel Agent</title>
+    <title>Dubai - Travel Agent</title>
 
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
@@ -21,10 +21,10 @@
     </header>
 
     <main>
-    <section>
-        <h1>Explora Dubai</h1>
-        <p> Dubái, una ciudad en constante evolución, es conocida por su lujo deslumbrante, arquitectura innovadora y una experiencia de compras sin igual. Desde el icónico Burj Khalifa, el edificio más alto del mundo, hasta los vastos centros comerciales como el Dubai Mall, Dubái ofrece un contraste fascinante entre la modernidad y las tradiciones árabes. Pasea por los zocos históricos, relájate en las playas soleadas, o disfruta de una aventura en el desierto con safaris en dunas. Dubái es un destino que combina lo mejor de la cultura, la innovación y la hospitalidad, haciendo de cada visita una experiencia inolvidable.</p>
-    </section>
+        <section>
+            <h1>Explora Dubai</h1>
+            <p> Dubái, una ciudad en constante evolución, es conocida por su lujo deslumbrante, arquitectura innovadora y una experiencia de compras sin igual. Desde el icónico Burj Khalifa, el edificio más alto del mundo, hasta los vastos centros comerciales como el Dubai Mall, Dubái ofrece un contraste fascinante entre la modernidad y las tradiciones árabes. Pasea por los zocos históricos, relájate en las playas soleadas, o disfruta de una aventura en el desierto con safaris en dunas. Dubái es un destino que combina lo mejor de la cultura, la innovación y la hospitalidad, haciendo de cada visita una experiencia inolvidable.</p>
+        </section>
 
 
     <section class="slideshow-container">
@@ -39,8 +39,7 @@
             </div>
             <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
+        </section>
     </main>
     
     <footer>
