--- a/destinos/destino_filipinas.html
+++ b/destinos/destino_filipinas.html
@@ -21,16 +21,13 @@
     </header>
 
     <main>
-
-    <section>
+        <section>
         <h1>Explora Filipina</h1>
-        <p>Filipinas es un paraíso tropical en el sudeste asiático, conocido por sus playas de arena blanca, aguas cristalinas, y exuberante naturaleza. Desde las impresionantes terrazas de arroz en Banaue hasta las vibrantes ciudades de Manila y Cebu, Filipinas ofrece una mezcla fascinante de belleza natural y cultura rica. Es un destino ideal para los amantes de la aventura, el buceo y la exploración de islas.
-</p>
-    </section>
+        <p>Filipinas es un paraíso tropical en el sudeste asiático, conocido por sus playas de arena blanca, aguas cristalinas, y exuberante naturaleza. Desde las impresionantes terrazas de arroz en Banaue hasta las vibrantes ciudades de Manila y Cebu, Filipinas ofrece una mezcla fascinante de belleza natural y cultura rica. Es un destino ideal para los amantes de la aventura, el buceo y la exploración de islas.</p>
+        </section>
 
     <section class="slideshow-container">
         <div class="mySlides1">
-            <div class="mySlides1">
                 <img src="../Imagenes/filipinas1.jpg" style="width:100%">
             </div>
             <div class="mySlides1">
@@ -41,15 +38,14 @@
             </div>
             <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
+        </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Travel Agent</p>
     </footer>
-    
+
     <script src="../scripts/slideshow.js"></script>
-    </body>
-    </html>
+</body>
+</html>
 
