--- a/destinos/destino_italia_norte.html
+++ b/destinos/destino_italia_norte.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>California - Travel Agent</title>
+    <title>Italia del Norte - Travel Agent</title>
 
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
@@ -21,37 +21,30 @@
     </header>
 
     <main>
+        <section>
+            <h1>Explora Italia del Norte</h1>
+            <p>Italia Norte es una región rica en historia, cultura y paisajes impresionantes. Desde los majestuosos Alpes y las imponentes Dolomitas hasta las románticas ciudades de Venecia y Milán, esta zona ofrece una mezcla de arte renacentista, moda de alta costura y gastronomía exquisita. Explora los viñedos de la Toscana, los lagos de Como y Garda, y disfruta de una experiencia cultural inigualable en cada esquina.
+            </section>
 
-    <section>
-        <h1>Explora Italia del Norte</h1>
-        <p>Italia Norte es una región rica en historia, cultura y paisajes impresionantes. Desde los majestuosos Alpes y las imponentes Dolomitas hasta las románticas ciudades de Venecia y Milán, esta zona ofrece una mezcla de arte renacentista, moda de alta costura y gastronomía exquisita. Explora los viñedos de la Toscana, los lagos de Como y Garda, y disfruta de una experiencia cultural inigualable en cada esquina.
-</p>
-    </section>
-
-
-    <section class="slideshow-container">
-        <div class="mySlides1">
+        <section class="slideshow-container">
             <div class="mySlides1">
-                <img src="../Imagenes/italian1.jpg" style="width:100%">
+                <img src="../Imagenes/italian1.jpg" style="width:100%" alt="Italia del Sur 1">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/italian2.jpg" style="width:100%">
+                <img src="../Imagenes/italian2.jpg" style="width:100%" alt="Italia del Sur 2">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/italian3.jpg" style="width:100%">
+                <img src="../Imagenes/italian3.jpg" style="width:100%" alt="Italia del Sur 3">
             </div>
             <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
+        </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Travel Agent</p>
     </footer>
-    
+
     <script src="../scripts/slideshow.js"></script>
-    </body>
-    </html>
-
-
+</body>
+</html>
