--- a/destinos/destino_peru.html
+++ b/destinos/destino_peru.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>California - Travel Agent</title>
+    <title>Perú - Travel Agent</title>
 
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
@@ -21,37 +21,30 @@
     </header>
 
     <main>
+        <section>
+            <h1>Explora Perú</h1>
+            <p>Perú es un país que destaca por su combinación de historia, cultura y paisajes naturales únicos. Desde la antigua ciudad de Machu Picchu hasta la selva amazónica y la costa del Pacífico, Perú ofrece una experiencia inolvidable para todos los viajeros. Disfruta de su deliciosa gastronomía, sus tradiciones milenarias y la hospitalidad de su gente.</p>
+        </section>
 
-    <section>
-        <h1>Explora Peru</h1>
-        <p>Perú es un país fascinante que combina historia antigua, paisajes impresionantes y una cultura vibrante. Desde las misteriosas ruinas de Machu Picchu hasta la selva amazónica y el Lago Titicaca, Perú ofrece una experiencia única para los viajeros. Disfruta de su gastronomía reconocida mundialmente, explora sus ciudades coloniales, y sumérgete en la rica herencia cultural que ha perdurado durante siglos.
-</p>
-    </section>
-
-
-    <section class="slideshow-container">
-        <div class="mySlides1">
+        <section class="slideshow-container">
             <div class="mySlides1">
-                <img src="../Imagenes/peru1.jpg" style="width:100%">
+                <img src="../Imagenes/peru1.jpg" style="width:100%" alt="Imagen de Perú 1">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/peru2.jpg" style="width:100%">
+                <img src="../Imagenes/peru2.jpg" style="width:100%" alt="Imagen de Perú 2">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/peru3.jpg" style="width:100%">
+                <img src="../Imagenes/peru3.jpg" style="width:100%" alt="Imagen de Perú 3">
             </div>
             <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
+        </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Travel Agent</p>
     </footer>
-    
+
     <script src="../scripts/slideshow.js"></script>
-    </body>
-    </html>
-
-
+</body>
+</html>
