--- a/destinos/destino_turquia.html
+++ b/destinos/destino_turquia.html
@@ -21,29 +21,24 @@
     </header>
 
     <main>
-    <section>
-        <h1>Explora Turquia</h1>
-        <p>Turquía es un cruce de caminos entre Oriente y Occidente, lleno de historia, cultura y maravillas naturales. Desde las antiguas calles de Estambul, con su impresionante Hagia Sophia, hasta los paisajes surrealistas de Capadocia y las playas del Mediterráneo, Turquía es un país de contrastes y belleza. Descubre su rica herencia cultural, disfruta de su deliciosa gastronomía, y explora los bazares vibrantes y las ruinas de antiguas civilizaciones.
+        <section>
+            <h1>Explora Turquía</h1>
+            <p>Turquía es un cruce de caminos entre Oriente y Occidente, lleno de historia, cultura y maravillas naturales. Desde las antiguas calles de Estambul, con su impresionante Hagia Sophia, hasta los paisajes surrealistas de Capadocia y las playas del Mediterráneo, Turquía es un país de contrastes y belleza. Descubre su rica herencia cultural, disfruta de su deliciosa gastronomía y explora los bazares vibrantes y las ruinas de antiguas civilizaciones.</p>
+        </section>
 
-</p>
-    </section>
-
-
-    <section class="slideshow-container">
-        <div class="mySlides1">
+        <section class="slideshow-container">
             <div class="mySlides1">
-                <img src="../Imagenes\turquia1.jpg" style="width:100%">
+                <img src="../Imagenes/turquia1.jpg" style="width:100%" alt="Imagen de Turquía 1">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/turquia2.jpg" style="width:100%">
+                <img src="../Imagenes/turquia2.jpg" style="width:100%" alt="Imagen de Turquía 2">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/turquia3.jpg" style="width:100%">
+                <img src="../Imagenes/turquia3.jpg" style="width:100%" alt="Imagen de Turquía 3">
             </div>
             <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
+        </section>
     </main>
     
     <footer>
@@ -51,7 +46,5 @@
     </footer>
     
     <script src="../scripts/slideshow.js"></script>
-    </body>
-    </html>
-
-
+</body>
+</html>
