--- a/destinos/destino_italia_sur.html
+++ b/destinos/destino_italia_sur.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>California - Travel Agent</title>
+    <title>Italia del Sur - Travel Agent</title>
 
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
@@ -21,36 +21,30 @@
     </header>
 
     <main>
-
         <section>
             <h1>Explora Italia del Sur</h1>
             <p>Italia Sur es el corazón cálido y acogedor del país, conocido por sus playas deslumbrantes, antiguas ruinas romanas y vibrante vida local. Desde la costa Amalfitana hasta las ciudades históricas de Nápoles y Palermo, esta región combina paisajes espectaculares con una rica herencia cultural. Disfruta de la auténtica cocina italiana, explora pueblos encantadores y sumérgete en la historia y las tradiciones del sur de Italia.</p>
         </section>
 
-
         <section class="slideshow-container">
             <div class="mySlides1">
-            <div class="slideshow-container">
-                <div class="mySlides1">
-                    <img src="../Imagenes/italias1.jpg" style="width: 100%" />
-                </div>
-                <div class="mySlides1">
-                    <img src="../Imagenes/italias2.jpg" style="width: 100%" />
-                </div>
-                <div class="mySlides1">
-                    <img src="../Imagenes/italias3.jpg" style="width: 100%" />
-                </div>
-                <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
+                <img src="../Imagenes/italias1.jpg" style="width:100%" alt="Italia del Sur 1">
+            </div>
+            <div class="mySlides1">
+                <img src="../Imagenes/italias2.jpg" style="width:100%" alt="Italia del Sur 2">
+            </div>
+            <div class="mySlides1">
+                <img src="../Imagenes/italias3.jpg" style="width:100%" alt="Italia del Sur 3">
+            </div>
+            <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+        </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Travel Agent</p>
     </footer>
-    
-    <script src="../scripts/slideshow.js"></script>
-    </body>
-    </html>
 
+    <script src="../scripts/slideshow.js"></script>
+</body>
+</html>
