--- a/destinos/destino_japon.html
+++ b/destinos/destino_japon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>California - Travel Agent</title>
+    <title>Japón - Travel Agent</title>
 
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
@@ -21,34 +21,30 @@
     </header>
 
     <main>
-    <section>
-        <h1>Explora Japón</h1>
-        <p>Japón es un país que ofrece una combinación única de historia, cultura, y modernidad. Es un destino ideal para quienes buscan experimentar la tranquilidad de los templos antiguos y jardines zen, mientras también disfrutan de la vibrante vida urbana y la innovación tecnológica. La amabilidad de su gente, la seguridad del país, y su eficiente red de transporte hacen que viajar por Japón sea una experiencia cómoda y enriquecedora.</p>
-    </section>
+        <section>
+            <h1>Explora Japón</h1>
+            <p>Japón es un país que ofrece una combinación única de historia, cultura y modernidad. Es un destino ideal para quienes buscan experimentar la tranquilidad de los templos antiguos y jardines zen, mientras disfrutan de la vibrante vida urbana y la innovación tecnológica. La amabilidad de su gente, la seguridad del país y su eficiente red de transporte hacen que viajar por Japón sea una experiencia cómoda y enriquecedora.</p>
+        </section>
 
-
-    <section class="slideshow-container">
-        <div class="mySlides1">
+        <section class="slideshow-container">
             <div class="mySlides1">
-                <img src="Imagenes/japon1.jpg" style="width:100%" alt="Naturaleza en Japón">
+                <img src="../Imagenes/japon1.jpg" style="width:100%" alt="Naturaleza en Japón">
             </div>
             <div class="mySlides1">
-                <img src="Imagenes/japon2.jpg" style="width:100%" alt="Montañas nevadas en Japón">
+                <img src="../Imagenes/japon2.jpg" style="width:100%" alt="Montañas nevadas en Japón">
             </div>
             <div class="mySlides1">
-                <img src="Imagenes/japon3.jpg" style="width:100%" alt="Paisaje montañoso en Japón">
+                <img src="../Imagenes/japon3.jpg" style="width:100%" alt="Paisaje montañoso en Japón">
             </div>
             <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
+        </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Travel Agent</p>
     </footer>
-    
-    <script src="../scripts/slideshow.js"></script>
-    </body>
-    </html>
 
+    <script src="../scripts/slideshow.js"></script>
+</body>
+</html>
