--- a/destinos/destino_portugal.html
+++ b/destinos/destino_portugal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>California - Travel Agent</title>
+    <title>Portugal - Travel Agent</title>
 
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
@@ -21,35 +21,31 @@
     </header>
 
     <main>
-    <section>
-        <h1>Explora Peru</h1>
-        <p>Portugal es un país que combina a la perfección su rica historia con paisajes naturales de gran belleza. Desde las calles empedradas de Lisboa y Oporto hasta las playas doradas del Algarve, Portugal ofrece una mezcla única de cultura, gastronomía y hospitalidad. Descubre sus castillos medievales, viñedos y una costa impresionante que atrae a surfistas y amantes del sol por igual.
-</p>
-    </section>
+        <section>
+            <h1>Explora Portugal</h1>
+            <p>Portugal es un país que combina a la perfección su rica historia con paisajes naturales de gran belleza. Desde las calles empedradas de Lisboa y Oporto hasta las playas doradas del Algarve, Portugal ofrece una mezcla única de cultura, gastronomía y hospitalidad. Descubre sus castillos medievales, viñedos y una costa impresionante que atrae a surfistas y amantes del sol por igual.</p>
+        </section>
 
-    <section class="slideshow-container">
-        <div class="mySlides1">
+        <section class="slideshow-container">
             <div class="mySlides1">
-                <img src="../Imagenes/portugal1.jpg" style="width:100%">
+                <img src="../Imagenes/portugal1.jpg" style="width:100%" alt="Paisaje en Portugal 1">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/portugal2.jpg" style="width:100%">
+                <img src="../Imagenes/portugal2.jpg" style="width:100%" alt="Paisaje en Portugal 2">
             </div>
             <div class="mySlides1">
-                <img src="../Imagenes/portugal3.jpg" style="width:100%">
+                <img src="../Imagenes/portugal3.jpg" style="width:100%" alt="Paisaje en Portugal 3">
             </div>
+
             <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-    </section>
+        </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Travel Agent</p>
     </footer>
-    
+
     <script src="../scripts/slideshow.js"></script>
-    </body>
-    </html>
-
-
+</body>
+</html>
