--- a/inicio.html
+++ b/inicio.html
@@ -3,33 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Destinos - Travel Agent</title>
+    <title>Inicio - Travel Agent</title>
     <link rel="stylesheet" href="estilos/styles.css">
 </head>
 <body>
 
-    <header>
-        <nav>
-            <ul class="menu">
-                <li><a href="inicio.html" class="active">Inicio</a></li>
-                <li><a href="destinos.html">Destinos</a></li>
-                <li><a href="hoteles.html">Hoteles</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="mi_perfil.html">Perfil</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <nav>
+        <ul class="menu">
+            <li><a href="inicio.html" class="active">Inicio</a></li>
+            <li><a href="destinos.html">Destinos</a></li>
+            <li><a href="hoteles.html">Hoteles</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <h1>ELITE SCAPES</h1>
-    
-<main>
-    <h2>Explora el mundo con nosotros</h2>
-    <p>Descubre destinos increíbles, disfruta de aventuras inolvidables y planea el viaje de tus sueños con nosotros. Ya sea que estés buscando explorar la vibrante cultura de ciudades cosmopolitas o relajarte en playas paradisíacas, estamos aquí para ayudarte a crear experiencias de viaje únicas.</p>
-</main>
+<div class="hero">
+    <div>
+        <h1>Explora el Mundo con Nosotros</h1>
+        <p>Descubre destinos increíbles y planifica el viaje de tus sueños.</p>
+        <a href="registro.html" class="btn-registro">¡Regístrate!</a>
+        <a href="login.html" class="btn-registro">!Login!</a>
 
-<footer>
+    </div>
+</div>
+
+<footer class="text-center py-3 mt-4">
     <p>&copy; 2024 Travel Agent. Todos los derechos reservados.</p>
 </footer>
 
 </body>
 </html>
+
