gen ai travel agent

--- a/destinos.html
+++ b/destinos.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Destinos - Travel Agent</title>
-    <link rel="stylesheet" href="estilos/styles.css">
-
-   
-</head>
-<body>
+    <link rel="stylesheet" href="estilos/styles.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul class="menu">
-                <li><a href="inicio.html" >Inicio</a></li>
-                <li><a href="destinos.html" class="active" >Destinos</a></li>
-                <li><a href="hoteles.html">Hoteles</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul class="menu">
+          <li><a href="inicio.html" class="active">Inicio</a></li>
+          <li><a href="destinos.html">Destinos</a></li>
+          <li><a href="hoteles.html">Hoteles</a></li>
+          <li><a href="plan.html">Plan</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <h1>Nuestros Destinos</h1>
-        <div class="pill-nav">
-            <ul>
-                <li><a href="destinos/destino_california.html">California</a></li>
-                <li><a href="destinos/destino_canadao.html">Canadá Oeste</a></li>
-                <li><a href="destinos/destino_canadae.html">Canadá Este</a></li>
-                <li><a href="destinos/destino_disney.html">Disney</a></li>
-                <li><a href="destinos/destino_dubai.html">Dubái</a></li>
-                <li><a href="destinos/destino_espana.html">España</a></li>
-                <li><a href="destinos/destino_filipinas.html">Filipinas</a></li>
-                <li><a href="destinos/destino_italia_norte.html">Italia Norte</a></li>
-                <li><a href="destinos/destino_italia_sur.html">Italia Sur</a></li>
-                <li><a href="destinos/destino_japon.html">Japón</a></li>
-                <li><a href="destinos/destino_la_paz.html">La Paz</a></li>
-                <li><a href="destinos/destino_peru.html">Perú</a></li>
-                <li><a href="destinos/destino_portugal.html">Portugal</a></li>
-                <li><a href="destinos/destino_turquia.html">Turquía</a></li>
-            </ul>
-        </div>
+      <h1>Nuestros Destinos</h1>
+      <div class="pill-nav">
+        <ul>
+          <li><a href="destinos/destino_california.html">California</a></li>
+          <li><a href="destinos/destino_canadao.html">Canadá Oeste</a></li>
+          <li><a href="destinos/destino_canadae.html">Canadá Este</a></li>
+          <li><a href="destinos/destino_disney.html">Disney</a></li>
+          <li><a href="destinos/destino_dubai.html">Dubái</a></li>
+          <li><a href="destinos/destino_espana.html">España</a></li>
+          <li><a href="destinos/destino_filipinas.html">Filipinas</a></li>
+          <li><a href="destinos/destino_italia_norte.html">Italia Norte</a></li>
+          <li><a href="destinos/destino_italia_sur.html">Italia Sur</a></li>
+          <li><a href="destinos/destino_japon.html">Japón</a></li>
+          <li><a href="destinos/destino_la_paz.html">La Paz</a></li>
+          <li><a href="destinos/destino_peru.html">Perú</a></li>
+          <li><a href="destinos/destino_portugal.html">Portugal</a></li>
+          <li><a href="destinos/destino_turquia.html">Turquía</a></li>
+        </ul>
+      </div>
     </main>
-</body>
+  </body>
 </html>
