--- a/inicio.html
+++ b/inicio.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio - Travel Agent</title>
-    <link rel="stylesheet" href="estilos/styles.css">
-</head>
-<body>
-
-<header>
-    <nav>
+    <link rel="stylesheet" href="estilos/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
         <ul class="menu">
-            <li><a href="inicio.html" class="active">Inicio</a></li>
-            <li><a href="destinos.html">Destinos</a></li>
-            <li><a href="hoteles.html">Hoteles</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="inicio.html" class="active">Inicio</a></li>
+          <li><a href="destinos.html">Destinos</a></li>
+          <li><a href="hoteles.html">Hoteles</a></li>
+          <li><a href="plan.html">Plan</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
-    </nav>
-</header>
+      </nav>
+    </header>
 
-<div class="hero">
-    <div>
+    <div class="hero">
+      <div>
         <h1>Explora el Mundo con Nosotros</h1>
         <p>Descubre destinos increíbles y planifica el viaje de tus sueños.</p>
         <a href="registro.html" class="btn-registro">¡Regístrate!</a>
         <a href="login.html" class="btn-registro">!Login!</a>
-
+      </div>
     </div>
-</div>
 
-<footer class="text-center py-3 mt-4">
-    <p>&copy; 2024 Travel Agent. Todos los derechos reservados.</p>
-</footer>
-
-</body>
+    <footer class="text-center py-3 mt-4">
+      <p>&copy; 2024 Travel Agent. Todos los derechos reservados.</p>
+    </footer>
+  </body>
 </html>
-
