--- a/contacto.html
+++ b/contacto.html
@@ -10,11 +10,10 @@
     <header>
       <nav>
         <ul class="menu">
-          <li><a href="inicio.html" class="active">Inicio</a></li>
+          <li><a href="index.html" >Inicio</a></li>
           <li><a href="destinos.html">Destinos</a></li>
           <li><a href="hoteles.html">Hoteles</a></li>
-          <li><a href="plan.html">Plan</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="contacto.html"class="active">Contacto</a></li>
         </ul>
       </nav>
     </header>
