--- a/destinos/destino_portugal.html
+++ b/destinos/destino_portugal.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="../inicio.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../destinos.html" class="active">Destinos</a></li>
                 <li><a href="../hoteles.html">Hoteles</a></li>
                 <li><a href="../contacto.html">Contacto</a></li>
