--- a/plan.html
+++ b/plan.html
@@ -21,6 +21,8 @@
           <li><a href="mi_perfil.php">Perfil</a></li>
           <li><a href="plan.html"class="active">Plan</a></li>
           <li><a href="reservas.php">Mis Reservas</a></li>
+          <li><a href="vuelos.html">Mis Reservas</a></li>
+
         </ul>
       </nav>
     </header>
