--- a/servicios.html
+++ b/servicios.html
@@ -24,11 +24,13 @@
         <header>
       <nav>
         <ul class="menu">
-          <li><a href="inicio.html" class="active">Inicio</a></li>
-          <li><a href="destinos.html">Destinos</a></li>
-          <li><a href="hoteles.html">Hoteles</a></li>
-          <li><a href="plan.html">Plan</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="mi_perfil.php">Perfil</a></li>
+          <li><a href="plan.html" >Plan</a></li>
+          <li><a href="vuelos.html">Vuelos</a></li>
+          <li><a href="reservas.php">Mis Reservas</a></li>
+          <li><a href="servicios.html" class="active">Servicios</a></li>
+
+
         </ul>
       </nav>
     </header>
