--- a/plan.html
+++ b/plan.html
@@ -20,8 +20,10 @@
         <ul class="menu">
           <li><a href="mi_perfil.php">Perfil</a></li>
           <li><a href="plan.html"class="active">Plan</a></li>
+          <li><a href="vuelos.html">Vuelos</a></li>
           <li><a href="reservas.php">Mis Reservas</a></li>
-          <li><a href="vuelos.html">Mis Reservas</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+        </ul>
 
         </ul>
       </nav>
