--- a/vuelos.html
+++ b/vuelos.html
@@ -17,6 +17,7 @@
                 <li><a href="plan.html" >Plan</a></li>
                 <li><a href="vuelos.html" class="active">Vuelos</a></li>
                 <li><a href="reservas.php">Mis Reservas</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
             </ul>
         </nav>
     </header>
