--- a/plan.html
+++ b/plan.html
@@ -54,10 +54,9 @@
         </div>
       </main>
       <!--<button class="Results" id="report">Send report!</button> -->
-      <footer>
-         Powered by SheCodes Athena
-        <a href="https://ai-generator-natcas.netlify.app" target="_blank"></a>
-      </footer>
+      <footer class="bg-dark text-white text-center py-3 mt-5">
+        &copy; 2024 Travel Agent. Todos los derechos reservados.
+    </footer>
     </div>
     <script src="src/app.js"></script>
   </body>
