--- a/servicios.html
+++ b/servicios.html
@@ -65,5 +65,8 @@
       </div>
     </div>
   </body>
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    &copy; 2024 Travel Agent. Todos los derechos reservados.
+</footer>
   <script src="src/appweather.js"></script>
 </html>
