--- a/servicios.html
+++ b/servicios.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="estilos/styles.css" />
+    <link
+      rel="stylesheet"
+    />
     <title>Weather app</title>
     <link rel="shortcut icon" href="
     https://s3.amazonaws.com/shecodesio-production/uploads/files/000/100/250/original/png-transparent-free-content-sunlight-s-text-orange-sunlight-thumbnail-removebg-preview.png?1697169810" type="image/x-icon">
@@ -63,10 +66,10 @@
           <button class="button-search mex">Mexico City</button>
         </div>
       </div>
+      <footer class="bg-dark text-white text-center py-3 mt-5">
+        &copy; 2024 Travel Agent. Todos los derechos reservados.
+    </footer>
     </div>
   </body>
-  <footer class="bg-dark text-white text-center py-3 mt-5">
-    &copy; 2024 Travel Agent. Todos los derechos reservados.
-</footer>
   <script src="src/appweather.js"></script>
 </html>
