--- a/servicios.html
+++ b/servicios.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="estilos/styles.css" />
     <link rel="stylesheet" href="estilos/stylesweather.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-    <title>Traveler Assistant - Clima y Moneda</title>
+    <title>Traveler Assistant - Clima, Moneda y Vuelos</title>
 </head>
 <body class="weather">
     <!-- Encabezado principal -->
@@ -15,7 +15,6 @@
             <ul class="menu">
                 <li><a href="mi_perfil.php">Perfil</a></li>
                 <li><a href="plan.html">Plan</a></li>
-                <li><a href="vuelos.html">Vuelos</a></li>
                 <li><a href="reservas.php">Mis Reservas</a></li>
                 <li><a href="servicios.html" class="active">Servicios</a></li>
             </ul>
@@ -30,6 +29,7 @@
             <ul id="menu" class="list-group">
                 <li class="list-group-item"><a href="#" onclick="showSection('weather')">Clima</a></li>
                 <li class="list-group-item"><a href="#" onclick="showSection('currency')">Conversor de Moneda</a></li>
+                <li class="list-group-item"><a href="#" onclick="showSection('flights')">Vuelos</a></li>
             </ul>
         </div>
 
@@ -64,6 +64,7 @@
                 </div>
             </div>
 
+            <!-- Aplicación de Conversor de Moneda -->
             <div id="currency" class="content-section" style="display: none;">
               <h2>Convertidor de Moneda</h2>
               <form id="currencyForm">
@@ -75,8 +76,22 @@
               <div id="currencyResultList" class="mt-3">
                 <h5 class="hint">El resultado aparecerá aquí...</h5>
                 <div id="conversionResult" class="result-large"></div>
-            </div>            
-          </div>          
+              </div>
+            </div>   
+
+            <!-- Aplicación de Vuelos -->
+            <div id="flights" class="content-section" style="display: none;">
+              <h2>Encuentra tu Próximo Vuelo</h2>
+              <form id="flightSearchForm">
+                  <input type="text" id="origin" placeholder="Origen (Ej. MEX)" class="form-control mb-2" required />
+                  <input type="text" id="destination" placeholder="Destino (Ej. JFK)" class="form-control mb-2" required />
+                  <input type="date" id="departureDate" placeholder="Fecha de Salida" class="form-control mb-2" required />
+                  <button type="submit" class="btn btn-primary">Buscar Vuelo</button>
+              </form>
+              <div id="flightResultsList" class="body mt-3">
+                <h5 class="hint">Los vuelos aparecerán aquí...</h5>
+              </div>
+            </div>          
         </div>
     </div>
 
@@ -88,12 +103,15 @@
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="src/appweather.js"></script>
     <script src="scripts/currency.js"></script>
+    <script src="scripts/script.js"></script>
     <script>
+        // Mostrar y ocultar secciones
         function showSection(section) {
             document.querySelectorAll('.content-section').forEach(el => el.style.display = 'none');
             document.getElementById(section).style.display = 'block';
         }
 
+        // Filtrar opciones en el menú lateral
         function filterMenu() {
             const filter = document.getElementById('mySearch').value.toUpperCase();
             const items = document.querySelectorAll('#menu li');
